@@ -6,9 +6,9 @@ Build Instructions
 
   - A POSIX-compliant C development environment
   - GNU make version 3.81 or later
-  - skalibs version 2.7.0.0 or later: http://skarnet.org/software/skalibs/
+  - skalibs version 2.8.0.0 or later: http://skarnet.org/software/skalibs/
   - execline version 2.5.0.1 or later: http://skarnet.org/software/execline/
-  - s6 version 2.7.2.0 or later: http://skarnet.org/software/s6/
+  - s6 version 2.8.0.0 or later: http://skarnet.org/software/s6/
 
  This software will run on any operating system that implements
 POSIX.1-2008, available at:
