@@ -48,11 +48,11 @@ scripts are also run in a controlled environment.
  <li> A POSIX-compliant system with a standard C development environment </li>
  <li> GNU make, version 3.81 or later </li>
  <li> <a href="//skarnet.org/software/skalibs/">skalibs</a> version
-2.7.0.0 or later </li>
+2.8.0.0 or later </li>
  <li> <a href="//skarnet.org/software/execline/">execline</a> version
-2.5.0.1 or later </li>
+2.5.0.2 or later </li>
  <li> <a href="//skarnet.org/software/s6/">s6</a> version
-2.7.2.0 or later </li>
+2.8.0.0 or later </li>
 </ul>
 
 <h3> Licensing </h3>
