@@ -1,4 +1,4 @@
 #!/command/execlineb -P
 s6-setuidgid dnslog
 exec -c
-s6-log t s1000000 n20 /var/log/dns-server-udp
+s6-log -d3 -- t s1000000 n20 /var/log/dns-server-udp
