@@ -1,4 +1,4 @@
 #!/command/execlineb -P
 s6-setuidgid ntplog
 exec -c
-s6-log t /var/log/ntpclient
+s6-log -d3 -- t /var/log/ntpclient
