@@ -1,4 +1,4 @@
 #!/command/execlineb -P
 s6-setuidgid qmaillog
 exec -c
-s6-log t s16777216 n64 /var/log/qmail
+s6-log -d3 -- t s16777216 n64 /var/log/qmail
