@@ -1,4 +1,4 @@
 #!/command/execlineb -P
 s6-setuidgid wifilog
 exec -c
-s6-log t s1000000 n20 /var/log/udhcpd-wlan0
+s6-log -d3 -- t s1000000 n20 /var/log/udhcpd-wlan0
